--- a/heatmap.css
+++ b/heatmap.css
@@ -4,3 +4,19 @@ html, body, #map {
   width:100%;
   height:100%;
 }
+
+#map {
+  cursor:default;
+}
+
+h2 {
+  padding:0px;
+  margin:0px;
+  line-height:100%;
+}
+
+p {
+  margin-top:0px !important;
+  margin-bottom:0px !important;
+  padding:0px 0px 10px 0px;
+}
