--- a/heatmap.css
+++ b/heatmap.css
@@ -20,3 +20,23 @@ p {
   margin-bottom:0px !important;
   padding:0px 0px 10px 0px;
 }
+
+.pelagios-load-indicator {
+  margin:auto;
+  position:absolute;
+  top:0;
+  right:0;
+  bottom:0;
+  left:0;
+  width:240px;
+  height:120px;
+  background:url('5-1.gif');
+  background-repeat:no-repeat;
+  background-position:center;
+  background-color:rgba(255, 255, 255, 0.8);
+  border:1px solid #fff;
+  -moz-border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -khtml-border-radius: 8px;
+  border-radius: 8px;
+}
