--- a/heatmap.css
+++ b/heatmap.css
@@ -30,7 +30,7 @@ p {
   left:0;
   width:240px;
   height:120px;
-  background:url('5-1.gif');
+  background:url('load.gif');
   background-repeat:no-repeat;
   background-position:center;
   background-color:rgba(255, 255, 255, 0.8);
